fix: align actor and map matrix views with auto table-layout (#68)

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -74,12 +74,7 @@
 .matrix-table {
   width: 100%;
   border-collapse: collapse;
-}
-
-@media (min-width: 768px) {
-  .matrix-table {
-    table-layout: fixed;
-  }
+  table-layout: auto;
 }
 
 .matrix-thead {
